# fretchen.github.io

./: .gitignore  .prettierignore  404.html  CATEGORY_IMPLEMENTATION.md  CLAUDE.md  CNAME  GROWTH_AGENT.md  MARKDOWN_HOT_RELOAD_FEATURE.md  PRIVATE_NFT_ARCHITECTURE.md  README.md  SEO_IMPROVEMENTS.md  assistent_plan.md  eslint.config.js  eslint.config.mjs  index.html  index.pageContext.json  ionos_image_generation_example.ipynb  package-lock.json  package.json  pr_desc.md  privacy.sh  robots.txt  sitemap.xml  skills-lock.json  tsconfig.json  vite.config.ts
.github/: CVE_TRIAGE.md  SECURITY.md  THREAT_MODEL.md  copilot-instructions.md  dependabot.yml
agent-onboarding/: index.html  index.pageContext.json
amo/: index.html  index.pageContext.json  lecture1.md  lecture10.md  lecture11.md  lecture12.md  lecture13.md  lecture15.md  lecture18.md  lecture19.md  lecture2.md  lecture20.md  lecture3.md  lecture3.mdx  lecture4.md  lecture5.md  lecture6.md  lecture7.md  lecture8.md  lecture9.md  lecure17.md
assistent/: index.html  index.pageContext.json
assistent-v2/: index.html
blog/: blog_stack.md  blogs.json  finishing_amo.md  hello_world.mdx  images.md  index.html  index.pageContext.json  ipfs.md  mirror.md  moving_lectures.md  post1.mdx  post2.mdx
comment_service/: .env.example  .gitignore  README.md  comments.ts  eslint.config.js  package-lock.json  package.json  serverless.yml  tsconfig.json  tsup.config.js
components/: AmoList.tsx  BlogList.tsx  MyFigure.tsx  Post.tsx
contracts/: GettingStartedFunctionsConsumer.sol
de/: 404.html  index.html  index.pageContext.json
eth/: .gitignore  COLLECTOR_NFT_FUNCTIONAL_EQUIVALENCE.md  DEPLOY_COLLECTOR_V1_GUIDE.md  DEPLOY_EIP3009_SPLITTER_V1_GUIDE.md  DEPLOY_SUPPORT_V2_GUIDE.md  GENIMG_DEPLOY_V4_GUIDE.md  GENIMG_UPGRADE_TO_V4_GUIDE.md  IGNITION_UPGRADE_GUIDE.md  MIGRATION_SUMMARY.md  README.md  SECURITY.md  SECURITY_FIX_v4.md  SPLITTER_IMPLEMENATION_PLAN.md  SUPPORT_V2_PROPOSAL.md  UPGRADE_GUIDE.md  UPGRADE_TO_V3_GUIDE.md  eslint.config.cjs  hardhat.config.cjs  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
growth/: index.html  index.pageContext.json
growth-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  GROWTH_AGENT.md  GROWTH_AGENT_SIMPLE.md  README.md  SECURITY.md  handler.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_local.py  serverless.yml
growth-agent/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
growth-agent/agent/: __init__.py  graph.py  llm_client.py  models.py  page_meta.py  publisher.py  state.py  storage.py  umami_client.py  utils.py
growth-agent/agent/nodes/: __init__.py  drafts.py  ingest.py  insights.py  plan.py  publish.py  strategy.py
growth-agent/notebooks/: 01_umami_ingest.ipynb  02_llm_insights.ipynb  03_content_creation.ipynb  04_s3_state.ipynb  04_social_posting.ipynb  05_api_approval.ipynb  05_social_posting.ipynb  06_api_approval.ipynb  06_approval.ipynb  06_simple_plan_node.ipynb  08_recover_published.ipynb
growth-agent/scripts/: deploy.py  run_local.py
growth-agent/terraform/: main.tf  variables.tf
growth-agent/terraform-bootstrap/: .terraform.lock.hcl  main.tf
growth-agent/test/: debug_mistral.py  golden_set.json  test_deploy.py  test_handler.py  test_llm_client.py  test_post_quality.py  test_run_local.py
imagegen/: index.html  index.pageContext.json
lab/: index.html  index.pageContext.json
layouts/: LayoutDefault.tsx
notebooks/: JS_NOTEBOOK_README.md  README.md  bfl_ai.ipynb  bot_farm_analysis.ipynb  common_pool.ipynb  deno.json  frontrunning_forensics.ipynb  gefangenendilemma_minimal.ipynb  genimg_x402_buyer.ipynb  genimg_x402_demo.ipynb  genimg_x402_facilitator.ipynb  genimg_x402_v2_js.ipynb  gridlock_estimates.ipynb  ijal_cost_update.ipynb  ionos_llm.ipynb  maut_szenarien_2030.csv  merkle_tree.ipynb  pyproject.toml  quantum_cpr.ipynb  quantum_pd.ipynb  scw_llm.ipynb  support_v2_demo.ipynb  tco_elkw_analyse.ipynb  us_budget_gridlock_dgg.ipynb  x402_facilitator_demo.ipynb  x402_facilitator_demo_ts.ipynb  x402_facilitator_demo_with_fees.ipynb  x402_fee_facilitator_demo.ipynb  x402_permit2_demo.ipynb
pages/: +Head.tsx  +config.ts
quantum/: index.html
scaleway/: README.md  pyproject.toml  request_tests.ipynb  requirements.txt
scaleway/handlers/: dec_ai.py  gen_ai.py  hello_bucket.py  hello_env.py  hello_world.py
scaleway/notebooks/: nft_tests.ipynb  test_buckets.ipynb
scw_js/: .env.test.example  .eslintrc.cjs  .prettierignore  ISSUE_CHAIN_NAME_CONSOLIDATION.md  PERFORMANCE_PLAN.md  README.md  SECURITY.md  TEST_SUMMARY.md  agent-registration.json  auth_utils.ts  classic_llm.js  dec_ai.js  discovery.ts  eslint.config.js  favicon.ts  genimg_bfl.js  genimg_x402.js  genimg_x402_token.js  genimg_x402_token.ts  getChain.js  getChain.ts  growth_api.ts  growth_service.ts  handler.js  handler.ts  image_service.js  image_service.ts  leaf_history.js  leaf_history.ts  llm_service.js  llm_service.ts  llm_x402_cron.ts  llmv1_abi.js  nft_abi.js  nft_abi_v2.js  openapi.genimg.json  openapi.json  openapi.llm.json  package-lock.json  package.json  (+20 more)
scw_js/notebooks/: .gitignore  README.md  bfl_ai.ipynb  deno.json  ionos_llm.ipynb  merkle_tree.ipynb  pyproject.toml  requests.ipynb  sc_llm_x402_buyer.ipynb  scw_llm.ipynb  x402_batch_settlement_server_spike.ipynb
src/: App.tsx
test/: Token.js  getBlogs.spec.ts
types/: BlogOptions.ts  BlogPost.ts
utils/: cleanMd.ts  cleanVike.ts  copyImg.ts  getAmo.ts  getBlogs.ts  preBuild.ts
website/: .mocharc.json  ANALYTICS_ASSISTANT.md  ANALYTICS_IMAGEGEN.md  ANALYTICS_SUPPORT.md  ANALYTICS_WALLET.md  ASSISTANT_MODERNIZATION_ANALYSIS.md  ASSISTANT_PAYMENT_IMPLEMENTATION.md  COMMENTING_PLAN.md  LAB_HUB_PROPOSAL.md  MULTICHAIN_EXPANSION_PROPOSAL.md  PERFORMANCE_PLAN.md  i18n.ts  (+11 more)
x402_facilitator/notebooks/: .env.example  .gitignore  README.md  _repro_claim.ts  deno.json  genimg_x402_buyer.ipynb  pyproject.toml  x402_batch_settlement_buyer.ipynb  x402_facilitator_demo_ts.ipynb  x402_facilitator_demo_with_fees.ipynb  x402_fee_facilitator_demo.ipynb
(+16065 files in other folders)
