[project]
name = "growth-agent"
version = "0.1.0"
description = "AI Growth Agent for social media follower growth"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "boto3>=1.34",
    "pydantic>=2.0",
    "langchain-openai>=1.1.14",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "python-dotenv>=1.0",
    "eth-account>=0.13.7",
    "deepeval>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
addopts = "-m 'not llm_eval'"
markers = [
    "llm_eval: expensive LLM-based evaluation tests (deselected by default)",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "deepeval.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "test_post_quality"
ignore_errors = true
