[tool.poetry]
name = "merkle-tree-notebooks"
version = "0.1.0"
description = "Jupyter notebooks for exploring Merkle trees and LLM API batching"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
matplotlib = "^3.7.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
pydantic = "^2.11.7"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
jupyter = "^1.1.1"
ipykernel = "^6.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
