[project]
name = "merkle-tree-notebooks"
version = "0.1.0"
description = "Jupyter notebooks for exploring Merkle trees and LLM API batching"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0",
    "web3>=7.12.1",
    "eth-account>=0.13.7",
    "requests>=2.33.0",
    "beautifulsoup4",
    "openpyxl",
    "eip712>=0.3.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.4",
    "jupyter>=1.1.1",
    "ipykernel>=6.30.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
