[tool.poetry]
name = "scaleway"
version = "0.1.0"
description = "Some simple python runners"
authors = ["fretchen <polka.99gefiedert@icloud.com>"]
license = "UNLICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.32.3"
cloudpathlib = {extras = ["s3"], version = "^0.21.0"}


[tool.poetry.group.dev.dependencies]
scaleway-functions-python = "^0.2.2"
dotenv = "^0.9.9"
pylint = "^3.3.6"
isort = "^6.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
