[project]
name = "x402-facilitator-notebooks"
version = "0.1.0"
description = "Jupyter notebooks for exercising the x402 facilitator (verify / settle / supported)"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "requests>=2.33.0",
    "web3>=7.12.1",
    "eth-account>=0.13.7",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
